# oracle-geometry-viewer

./: .gitignore  README.md
ora_geom_api/: Dockerfile  README.md  main.py  requirements.txt
ora_geom_gui/: Cargo.toml  README.md
ora_geom_gui/src/: api.rs  geometry_viewer.rs  main.rs  query.rs  sdo_geometry.rs
