[package]
name = "ora_geom_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui_plot = "0.23.0"
egui_extras = { version = "0.23.0", features = ["syntect"] }
eframe = "0.23.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.130", features = ["derive"] }
confy = "0.5.1"
ureq = { version = "2.1.1", features = ["json"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
url = "2.2.2"
reqwest = { version = "0.11.4", features = ["json"], optional = true }

[features]
async = ["reqwest"]
